2008-11-10  Andreas Kupries  <andreask@activestate.com>

	* doc/platform_shell.n: Fixed [Bug 2255235], reported by Ulrich
	* library/platform/pkgIndex.tcl: Ring <uring@users.sourceforge.net>.
	* library/platform/shell.tcl: Updated the LOCATE command in the
	* library/tm.tcl: package 'platform::shell' to handle the new form
	* unix/Makefile.in: of 'provide' commands generated by tm.tcl. Bumped
	* win/Makefile.in: package to version 1.1.4. Added cross-references
	to the relevant parts of the code to avoid future desynchronization.

2008-11-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclPort.h: remove the ../win/ header dir as the build
	system already has it, and it confuses builds when used with
	private headers installed.

2008-10-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/http/http.tcl: Backported a fix for reading HTTP-like
	protocols that used to work and were broken with http 2.7. Now
	http 2.7.2

2008-10-23  Don Porter	<dgp@users.sourceforge.net>

	* generic/tcl.h:	Bump version number to 8.5.6b1 to distinguish
	* library/init.tcl:	CVS development snapshots from the 8.5.5 and
	* unix/configure.in:	8.5.6 releases.
	* unix/tcl.spec:
	* win/configure.in:
	* tools/tcl.wse.in:
	* README

	* unix/configure:	autoconf (2.59)
	* win/configure:

2008-10-19  Don Porter	<dgp@users.sourceforge.net>

	* generic/tclProc.c:	Reset -level and -code values to defaults
	after they are used.  [Bug 2152286].

2008-10-16  Don Porter	<dgp@users.sourceforge.net>

	* library/init.tcl:	Revised [unknown] so that it carefully 
	preserves the state of the ::errorInfo and ::errorCode variables
	at the start of auto-loading and restores that state before the
	autoloaded command is evaluated.  [Bug 2140628]

2008-10-10  Don Porter	<dgp@users.sourceforge.net>

	*** 8.5.5 TAGGED FOR RELEASE ***

	* generic/tcl.h:	Bump to 8.5.5 for release.
	* library/init.tcl:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/configure.in:
